add more resources, add translations to test drie

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -44,12 +44,17 @@
             <li><a href="#wheel-inspection">All 4 tires/wheels the same?</a></li>
             <li><a href="#wheel-inspection">Wheel damage?</a></li>
 
-            <li><a href="#rips-on-seats">Rips on seats?</a></li>
+            <li><a href="#seat-condition">Rips on seats?</a></li>
             <li><a href="#car-options">Car Options (Navi, sunroof, etc)</a></li>
-            <li><a href="#headliner">Headliner (saggy?)</a></li>
-            <li><a href="#wheel-inspection">Automatic/Manual</a></li>
-            <li><a href="#wheel-inspection">Steering wheel (worn?)</a></li>
-            <li><a href="#wheel-inspection">Wheel damage?</a></li>
+            <li><a href="#headliner-condition">Headliner (saggy?)</a></li>
+            <li><a href="#transmission-type">Automatic/Manual</a></li>
+            <li><a href="#steering-wheel-condition">Steering wheel (worn?)</a></li>
+
+            <li><a href="#engine-leaks">Leaks (near engine and rear diff)</a></li>
+            <li><a href="#rust">Rust (exhaust, frame, body, etc)</a></li>
+            <li><a href="#suspension">Suspension (tie rods, ball joints, shocks, axle, etc)</a></li>
+            <li><a href="#frame-damage">Frame Damage (from collision)</a></li>
+
         </ul>
 
 
@@ -110,6 +115,49 @@
                 remaining tread life. If the tread does not reach the top of a coin's head, it's a strong indication
                 that it's time to consider tire replacement. Additionally, many tires feature built-in tread wear
                 indicators.</div>
+        </div>
+        <div>
+            <div id="transmission-type">
+
+                <h2>Transmission Type</h2>
+                <div>Determine whether the car has an automatic or manual transmission, depending on your driving
+                    preferences and needs.</div>
+            </div>
+            <div id="seat-condition">
+                <h2>Seat Condition</h2>
+                <div>
+                    Thoroughly inspect the condition of all seats. Look for tears, stains, or excessive wear. Check for any small cuts or unusual wear patterns.
+                </div>
+            </div>
+
+            <div id="steering-wheel-condition">
+                <h2>Steering Wheel Condition</h2>
+                <div>
+                    Check the steering wheel for signs of wear, ensure there are no peeling or
+                    cracked surfaces.
+                </div>
+            </div>
+
+            <div id="headliner-condition">
+                <h2>Headliner Condition</h2>
+                <div>
+                    Inspect the headliner on the interior roof. Make sure it is not sagging or hanging, which could
+                    indicate poor maintenance or water damage.
+                    Apply the same level of scrutiny to the rear seats and the rear headliner, ensuring they are in good
+                    condition.
+                </div>
+            </div>
+            <div id="car-options">
+
+                <h3>Car Options</h3>
+                <div>Check for car options or features, such as navigation systems, sunroofs, and more. Ensure they are
+                    functional and in good condition.</div>
+            </div>
+
+
+
+
+
         </div>
     </div>
 
