--- a/pages/test_drive.html
+++ b/pages/test_drive.html
@@ -95,37 +95,37 @@
         </div>
 
         <!-- Additional Checklist Items - Things to Bring -->
-        <h2>Things to Bring</h2>
+        <h2 data-i18n="test-drive.bring">Things to Bring</h2>
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="obdii-scanner" />
-            <label class="form-check-label" for="obdii-scanner">OBDII Scanner</label>
+            <label class="form-check-label" for="obdii-scanner" data-i18n="test-drive.obdii-scanner">OBDII Scanner</label>
         </div>
 
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="magnet" />
-            <label class="form-check-label" for="magnet">Magnet</label>
+            <label class="form-check-label" for="magnet" data-i18n="test-drive.magnet">Magnet</label>
         </div>
 
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="flashlight" />
-            <label class="form-check-label" for="flashlight">Flashlight</label>
+            <label class="form-check-label" for="flashlight" data-i18n="test-drive.flashlight">Flashlight</label>
         </div>
 
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="paper-towel" />
-            <label class="form-check-label" for="paper-towel">Paper Towel</label>
+            <label class="form-check-label" for="paper-towel" data-i18n="test-drive.paper-towel">Paper Towel</label>
         </div>
 
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="pen" />
-            <label class="form-check-label" for="pen">Pen</label>
+            <label class="form-check-label" for="pen" data-i18n="test-drive.paper-towel">Pen</label>
         </div>
         <!-- Additional Checklist Items - From your Research -->
-        <h2>From your Research</h2>
+        <h2 data-i18n="test-drive.value-from-research">From your Research</h2>
 
         <!-- Value of the Car (trade-in value) -->
         <div class="mb-3">
-            <label for="car-value" class="form-label">Value of the Car (trade-in value):</label>
+            <label for="car-value" class="form-label" data-i18n="test-drive.value-trade-in">Value of the Car (trade-in value):</label>
             <input type="text" class="form-control" id="car-value" placeholder="Enter the trade-in value of the car" />
         </div>
 
@@ -142,68 +142,68 @@
         </div> -->
         <!-- Engine Starting Instructions -->
 
-    <h2>Engine (start cold, let warm up, go for a ride)</h2>
+    <h2 data-i18n="test-drive.h2engine">Engine (start cold, let warm up, go for a ride)</h2>
         <!-- Additional Checklist Items - Before Startup -->
-        <h2>Before Startup</h2>
+        <h2 data-i18n="test-drive.before-startup">Before Startup</h2>
 
         <!-- Hood Pops Open Easily -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="hood-pops-open" />
-            <label class="form-check-label" for="hood-pops-open">Hood Pops Open Easily?</label>
+            <label class="form-check-label" for="hood-pops-open" data-i18n="test-drive.hood-pops-open">Hood Pops Open Easily?</label>
         </div>
 
         <!-- Hood Support/Struts Work -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="hood-support-struts" />
-            <label class="form-check-label" for="hood-support-struts">Hood Support/Struts Work?</label>
+            <label class="form-check-label" for="hood-support-struts" data-i18n="test-drive.hood-support-struts">Hood Support/Struts Work?</label>
         </div>
 
         <!-- Frame (Straight, No Kinks) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="frame-condition" />
-            <label class="form-check-label" for="frame-condition">Frame (Straight, No Kinks)?</label>
+            <label class="form-check-label" for="frame-condition" data-i18n="test-drive.frame-condition">Frame (Straight, No Kinks)?</label>
         </div>
 
         <!-- Clean vs Dirty (Engine Detailed) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="engine-cleanliness" />
-            <label class="form-check-label" for="engine-cleanliness">Clean vs Dirty (Was the engine detailed)?</label>
+            <label class="form-check-label" for="engine-cleanliness" data-i18n="test-drive.engine-cleanliness">Clean vs Dirty (Was the engine detailed)?</label>
         </div>
 
         <!-- Inspect for Leaks  (oil, coolant, tranny) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="inspect-leaks" />
-            <label class="form-check-label" for="inspect-leaks">Inspect for Leaks? (oil, coolant, tranny)
+            <label class="form-check-label" for="inspect-leaks" data-i18n="test-drive.inspect-leaks">Inspect for Leaks? (oil, coolant, tranny)
             </label>
         </div>
         <!-- Any Damage/New Parts -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="damage-new-parts" />
-            <label class="form-check-label" for="damage-new-parts">Any Damage/New Parts?</label>
+            <label class="form-check-label" for="damage-new-parts" data-i18n="test-drive.damage-new-parts">Any Damage/New Parts?</label>
         </div>
         <!-- Oil Level and Oil (no metal, not frothy) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="oil-level-oil" />
-            <label class="form-check-label" for="oil-level-oil">Oil Level and Oil (no metal, not frothy)?</label>
+            <label class="form-check-label" for="oil-level-oil" data-i18n="test-drive.oil-level-oil">Oil Level and Oil (no metal, not frothy)?</label>
         </div>
 
         <!-- Oil Cap (no froth under cap) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="oil-cap-froth" />
-            <label class="form-check-label" for="oil-cap-froth">Oil Cap (no froth under cap)?</label>
+            <label class="form-check-label" for="oil-cap-froth" data-i18n="test-drive.oil-cap-froth">Oil Cap (no froth under cap)?</label>
         </div>
 
         <!-- Check Coolant (make sure it's not hot when you check) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="check-coolant" />
-            <label class="form-check-label" for="check-coolant">Check Coolant (make sure it's not hot when you
+            <label class="form-check-label" for="check-coolant" data-i18n="test-drive.check-coolant">Check Coolant (make sure it's not hot when you
                 check)?</label>
         </div>
 
         <!-- Inspect Hoses, Belts, Battery Posts, Wires, etc. -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="inspect-components" />
-            <label class="form-check-label" for="inspect-components">Inspect Hoses, Belts, Battery Posts, Wires,
+            <label class="form-check-label" for="inspect-components" data-i18n="test-drive.inspect-components">Inspect Hoses, Belts, Battery Posts, Wires,
                 etc.?</label>
         </div>
 
@@ -742,11 +742,11 @@
 
         <h3>Scan Engine after Test Drive</h3>
         <div class="review-section">
-            <h3>Checklist information review:</h3>
+            <h3 data-i18n="basic.h3review">Checklist information review:</h3>
             <div class="car-info"></div>
-            <div>How many items did you check: <span id="checked-count">0/92</span></div>
+            <div><div data-i18n="basic.check">How many items did you check:</div><span id="checked-count">0/92</span></div>
 
-            <p>Comments you added:</p>
+            <p data-i18n="basic.comments">Comments you added:</p>
             <div class="review-text"></div>
         </div>
 
@@ -762,7 +762,7 @@
     <!-- Include Bootstrap JavaScript and jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    
+
     <script src="/js/i18n.js"></script>
 
 </body>
