add more resources, update sitemap

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -52,6 +52,7 @@
 
             <li><a href="#engine-leaks">Leaks (near engine and rear diff)</a></li>
             <li><a href="#rust">Rust (exhaust, frame, body, etc)</a></li>
+
             <li><a href="#suspension">Suspension (tie rods, ball joints, shocks, axle, etc)</a></li>
             <li><a href="#frame-damage">Frame Damage (from collision)</a></li>
 
@@ -60,7 +61,7 @@
 
 
         <div id="scratches-dents">
-            <h2>Scratches and Dents</h2>
+            <h4>Scratches and Dents</h4>
             <div>When conducting a car inspection, it's crucial not to assess the vehicle when it's wet, as it can
                 conceal certain imperfections. Additionally, be sure to check for holes and dents, as these issues can
                 have a significant impact on the car's value and should be considered during negotiations. Moreover,
@@ -70,14 +71,14 @@
         </div>
 
         <div id="windshield">
-            <h2>Windshield (chips or cracks?)</h2>
+            <h4>Windshield (chips or cracks?)</h4>
             <div>During a thorough vehicle inspection, it is essential to check the condition of the glass surfaces,
                 specifically for any chips or cracks. These imperfections not only compromise the aesthetics of the
                 vehicle but also pose a safety risk.</div>
         </div>
 
         <div id="headlights">
-            <h2>Headlights (foggy?)</h2>
+            <h4>Headlights (foggy?)</h4>
             <div>Checking the condition of the headlights is a critical part of a vehicle inspection. One aspect to
                 consider is whether the headlights appear foggy or hazy, which can be caused by oxidation and
                 significantly affect their effectiveness and the overall aesthetics of the car. Restoring or replacing
@@ -86,7 +87,7 @@
         </div>
 
         <div id="inspection-sticker">
-            <h2>Inspection Sticker Current?</h2>
+            <h4>Inspection Sticker Current?</h4>
             <div>
                 Confirm the validity of the inspection sticker. Many regions implement a grace period, such as a
                 six-month tolerance limit, allowing for flexibility beyond the stated expiration date.
@@ -94,7 +95,7 @@
         </div>
 
         <div id="rusty-brake-rotors">
-            <h2>Rusty Brake Rotors</h2>
+            <h4>Rusty Brake Rotors</h4>
             <div>
                 Rusty brake rotors can serve as an indicator that a car may have been stationary for an extended period.
                 This could signify potential issues or that the seller is eager to part with the vehicle, possibly at a
@@ -104,7 +105,7 @@
         </div>
 
         <div id="wheel-inspection">
-            <h2>Wheel Inspection</h2>
+            <h4>Wheel Inspection</h4>
             <div>Ensuring that the wheels are uniform, in good condition, and have sufficient tread depth is a
                 foundational step in making a wise purchase. Begin by scrutinizing the wheels for uniformity. Ideally,
                 all wheels should match in size, type, and style. Discrepancies in the wheels can result in uneven tire
@@ -119,19 +120,20 @@
         <div>
             <div id="transmission-type">
 
-                <h2>Transmission Type</h2>
+                <h4>Transmission Type</h4>
                 <div>Determine whether the car has an automatic or manual transmission, depending on your driving
                     preferences and needs.</div>
             </div>
             <div id="seat-condition">
-                <h2>Seat Condition</h2>
+                <h4>Seat Condition</h4>
                 <div>
-                    Thoroughly inspect the condition of all seats. Look for tears, stains, or excessive wear. Check for any small cuts or unusual wear patterns.
+                    Thoroughly inspect the condition of all seats. Look for tears, stains, or excessive wear. Check for
+                    any small cuts or unusual wear patterns.
                 </div>
             </div>
 
             <div id="steering-wheel-condition">
-                <h2>Steering Wheel Condition</h2>
+                <h4>Steering Wheel Condition</h4>
                 <div>
                     Check the steering wheel for signs of wear, ensure there are no peeling or
                     cracked surfaces.
@@ -139,7 +141,7 @@
             </div>
 
             <div id="headliner-condition">
-                <h2>Headliner Condition</h2>
+                <h4>Headliner Condition</h4>
                 <div>
                     Inspect the headliner on the interior roof. Make sure it is not sagging or hanging, which could
                     indicate poor maintenance or water damage.
@@ -149,15 +151,29 @@
             </div>
             <div id="car-options">
 
-                <h3>Car Options</h3>
+                <h4>Car Options</h4>
                 <div>Check for car options or features, such as navigation systems, sunroofs, and more. Ensure they are
                     functional and in good condition.</div>
             </div>
 
+            <div id="engine-leaks">
+                <h4>Engine Leaks</h4>
+                <div>
+                    Take a close look under the car, look for visible leaks that could signal potential issues.</div>
+            </div>
 
-
-
-
+            <div id="rust">
+                <h4>Rust</h4>
+                <div>Start from the front. Check for any frame damage or signs of rust. On the sides, inspect under the
+                    rocker panels for rust, and continue checking the exhaust system, and frame of the car.
+                    Examine the center and the rear of the car to ensure that it is rust-free.</div>
+            </div>
+            <div id="frame-damage">
+                <h4>Frame Damage</h4>
+                <div>Check the rear of the car, paying special attention to the spare
+                    tire carrier. If it appears bent or damaged, it could be a sign of a significant rear-end collision,
+                    since it is challenging or even impossible for body shops to repair and make it invisible.</div>
+            </div>
         </div>
     </div>
 
