add translations and finish basic resources

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -49,13 +49,10 @@
             <li><a href="#headliner-condition">Headliner (saggy?)</a></li>
             <li><a href="#transmission-type">Automatic/Manual</a></li>
             <li><a href="#steering-wheel-condition">Steering wheel (worn?)</a></li>
-
             <li><a href="#engine-leaks">Leaks (near engine and rear diff)</a></li>
             <li><a href="#rust">Rust (exhaust, frame, body, etc)</a></li>
-
+            <li><a href="#rust">Frame Damage (from collision)</a></li>
             <li><a href="#suspension">Suspension (tie rods, ball joints, shocks, axle, etc)</a></li>
-            <li><a href="#frame-damage">Frame Damage (from collision)</a></li>
-
         </ul>
 
 
@@ -163,17 +160,23 @@
             </div>
 
             <div id="rust">
-                <h4>Rust</h4>
+                <h4>Frame Damage and Rust</h4>
                 <div>Start from the front. Check for any frame damage or signs of rust. On the sides, inspect under the
-                    rocker panels for rust, and continue checking the exhaust system, and frame of the car.
-                    Examine the center and the rear of the car to ensure that it is rust-free.</div>
+                    rocker panels for rust and continue checking the exhaust system. Ensure that the car's frame looks
+                    straight and solid. Examine the center and the rear of the car to ensure that it is rust-free. When
+                    checking the rear of the car, pay special attention to the spare tire carrier. If it appears bent or
+                    damaged, it could be a sign of a significant rear-end collision, as it can be challenging or even
+                    impossible for body shops to repair and make it invisible.</div>
             </div>
-            <div id="frame-damage">
-                <h4>Frame Damage</h4>
-                <div>Check the rear of the car, paying special attention to the spare
-                    tire carrier. If it appears bent or damaged, it could be a sign of a significant rear-end collision,
-                    since it is challenging or even impossible for body shops to repair and make it invisible.</div>
+
+            <div id="suspension">
+                <h4>Suspension</h4>
+                <div>
+                    Check both the rear and front suspensions. Ensure they are rust-free. Look for any leaks from the
+                    shocks and check for any other leaks.</div>
             </div>
+
+
         </div>
     </div>
 
