--- a/pages/test_drive.html
+++ b/pages/test_drive.html
@@ -208,85 +208,85 @@
         </div>
 
         <!-- Additional Checklist Items - Cold Startup -->
-        <h2>Cold Startup</h2>
+        <h2 data-i18n="test-drive.h2-cold-startup">Cold Startup</h2>
 
         <!-- Any Strange Noises/Smoke? -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="strange-noises-smoke" />
-            <label class="form-check-label" for="strange-noises-smoke">Any Strange Noises/Smoke? (ticking, grinding,
+            <label class="form-check-label" for="strange-noises-smoke" data-i18n="test-drive.strange-noises-smoke">Any Strange Noises/Smoke? (ticking, grinding,
                 etc)</label>
         </div>
 
         <!-- Does It Take Too Long to Start? -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="long-start" />
-            <label class="form-check-label" for="long-start">Does It Take Too Long to Start?</label>
+            <label class="form-check-label" for="long-start" data-i18n="test-drive.long-start">Does It Take Too Long to Start?</label>
         </div>
 
         <!-- Does the Motor Move a Lot (Bad Motor Mounts)? -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="motor-movement" />
-            <label class="form-check-label" for="motor-movement">Does the Motor Move a Lot (Bad Motor Mounts)?</label>
+            <label class="form-check-label" for="motor-movement" data-i18n="test-drive.motor-movement">Does the Motor Move a Lot (Bad Motor Mounts)?</label>
         </div>
 
         <!-- Check Under Oil Cap (Strong Pulses/Smoke) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="oil-cap-pulses-smoke" />
-            <label class="form-check-label" for="oil-cap-pulses-smoke">Check Under Oil Cap (Strong
+            <label class="form-check-label" for="oil-cap-pulses-smoke" data-i18n="test-drive.oil-cap-pulses-smoke">Check Under Oil Cap (Strong
                 Pulses/Smoke)?</label>
         </div>
 
         <!-- Idle (does the idle drop and smooth out) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="idle-smooth-out" />
-            <label class="form-check-label" for="idle-smooth-out">Idle (does the idle drop and smooth out)?</label>
+            <label class="form-check-label" for="idle-smooth-out" data-i18n="test-drive.idle-smooth-out">Idle (does the idle drop and smooth out)?</label>
         </div>
 
         <!-- Check Exhaust for Smoke Upon Startup -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="exhaust-smoke" />
-            <label class="form-check-label" for="exhaust-smoke">Check Exhaust for Smoke Upon Startup?</label>
+            <label class="form-check-label" for="exhaust-smoke" data-i18n="test-drive.exhaust-smoke">Check Exhaust for Smoke Upon Startup?</label>
         </div>
         <!-- New Checklist Section - Warm Startup -->
-        <h2>Warm Startup</h2>
+        <h2 data-i18n="test-drive.warm-startup">Warm Startup</h2>
 
         <!-- Any Strange Noises/Smoke? -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="strange-noises-smoke-warm" />
-            <label class="form-check-label" for="strange-noises-smoke-warm">Any Strange Noises/Smoke? (ticking,
+            <label class="form-check-label" for="strange-noises-smoke-warm" data-i18n="test-drive.strange-noises-smoke-warm">Any Strange Noises/Smoke? (ticking,
                 grinding, etc)</label>
         </div>
 
         <!-- Does It Take Too Long to Start? -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="long-start-warm" />
-            <label class="form-check-label" for="long-start-warm">Does It Take Too Long to Start?</label>
+            <label class="form-check-label" for="long-start-warm" data-i18n="test-drive.long-start-warm">Does It Take Too Long to Start?</label>
         </div>
 
         <!-- Check Under Oil Cap (Strong Pulses/Smoke/Froth) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="oil-cap-pulses-smoke-froth-warm" />
-            <label class="form-check-label" for="oil-cap-pulses-smoke-froth-warm">Check Under Oil Cap (Strong
+            <label class="form-check-label" for="oil-cap-pulses-smoke-froth-warm" data-i18n="test-drive.oil-cap-pulses-smoke-froth-warm">Check Under Oil Cap (Strong
                 Pulses/Smoke/Froth)?</label>
         </div>
 
         <!-- Idle (does the idle drop and smooth out) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="idle-smooth-out-warm" />
-            <label class="form-check-label" for="idle-smooth-out-warm">Idle (does the idle drop and smoothout)?</label>
+            <label class="form-check-label" for="idle-smooth-out-warm" data-i18n="test-drive.idle-smooth-out-warm">Idle (does the idle drop and smoothout)?</label>
         </div>
 
         <!-- Bubbling in Radiator Reservoir? (Blown Head Gasket) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="radiator-reservoir-bubbling" />
-            <label class="form-check-label" for="radiator-reservoir-bubbling">Bubbling in Radiator Reservoir? (Blown
+            <label class="form-check-label" for="radiator-reservoir-bubbling" data-i18n="test-drive.radiator-reservoir-bubbling">Bubbling in Radiator Reservoir? (Blown
                 Head Gasket)</label>
         </div>
 
         <!-- Check Exhaust for Smoke Upon Startup -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="exhaust-smoke-warm" />
-            <label class="form-check-label" for="exhaust-smoke-warm">Check Exhaust for Smoke Upon Startup?</label>
+            <label class="form-check-label" for="exhaust-smoke-warm" data-i18n="test-drive.exhaust-smoke-warm">Check Exhaust for Smoke Upon Startup?</label>
         </div>
         <!-- New Checklist Section - Interior -->
         <h2>Interior</h2>
