--- a/pages/test_drive.html
+++ b/pages/test_drive.html
@@ -289,230 +289,230 @@
             <label class="form-check-label" for="exhaust-smoke-warm" data-i18n="test-drive.exhaust-smoke-warm">Check Exhaust for Smoke Upon Startup?</label>
         </div>
         <!-- New Checklist Section - Interior -->
-        <h2>Interior</h2>
+        <h2 data-i18n="test-drive.h2-interior">Interior</h2>
 
         <!-- Subtitle: Seats -->
-        <h3>Seats</h3>
+        <h3 data-i18n="test-drive.h3-searts">Seats</h3>
 
         <!-- Seats: Front and Rear -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-seats" />
-            <label class="form-check-label" for="interior-seats">Seats: Front and Rear</label>
+            <label class="form-check-label" for="interior-seats" data-i18n="test-drive.interior-seats">Seats: Front and Rear</label>
         </div>
 
         <!-- Damage, Rips, Tears, Stains, Smell -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-damage-stains" />
-            <label class="form-check-label" for="interior-damage-stains">Damage, Rips, Tears, Stains, Smell</label>
+            <label class="form-check-label" for="interior-damage-stains" data-i18n="test-drive.interior-damage-stains">Damage, Rips, Tears, Stains, Smell</label>
         </div>
 
         <!-- Solid/No Movement -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-solid-no-movement" />
-            <label class="form-check-label" for="interior-solid-no-movement">Solid/No Movement</label>
+            <label class="form-check-label" for="interior-solid-no-movement" data-i18n="test-drive.interior-solid-no-movement">Solid/No Movement</label>
         </div>
 
         <!-- Adjust Properly (Forward, Back, Tilt) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-adjust-properly" />
-            <label class="form-check-label" for="interior-adjust-properly">Adjust Properly (Forward, Back, Tilt)</label>
+            <label class="form-check-label" for="interior-adjust-properly" data-i18n="test-drive.interior-adjust-properly">Adjust Properly (Forward, Back, Tilt)</label>
         </div>
 
         <!-- Subtitle: Carpet -->
-        <h3>Carpet</h3>
+        <h3 data-i18n="test-drive.h3-carpet">Carpet</h3>
 
         <!-- Carpet: Front, Rear, and Trunk -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-carpet" />
-            <label class="form-check-label" for="interior-carpet">Carpet: Front, Rear, and Trunk</label>
+            <label class="form-check-label" for="interior-carpet" data-i18n="test-drive.interior-carpet">Carpet: Front, Rear, and Trunk</label>
         </div>
 
         <!-- Check Under Carpets (Rust, Water) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-check-under-carpets" />
-            <label class="form-check-label" for="interior-check-under-carpets">Check Under Carpets (Rust, Water)</label>
+            <label class="form-check-label" for="interior-check-under-carpets" data-i18n="test-drive.interior-check-under-carpets">Check Under Carpets (Rust, Water)</label>
         </div>
 
         <!-- Floor Mats? -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-floor-mats" />
-            <label class="form-check-label" for="interior-floor-mats">Floor Mats?</label>
+            <label class="form-check-label" for="interior-floor-mats" data-i18n="test-drive.nterior-floor-mats">Floor Mats?</label>
         </div>
 
         <!-- Stains, Holes, Cuts, Smell, Dampness -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-carpet-conditions" />
-            <label class="form-check-label" for="interior-carpet-conditions">Stains, Holes, Cuts, Smell,
+            <label class="form-check-label" for="interior-carpet-conditions" data-i18n="test-drive.interior-carpet-conditions">Stains, Holes, Cuts, Smell,
                 Dampness</label>
         </div>
         <!-- Subtitle: Trunk -->
-        <h3>Trunk</h3>
+        <h3 data-i18n="test-drive.h3-trunk">Trunk</h3>
 
         <!-- Spare (Holds Air, Not Rusty) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-trunk-spare" />
-            <label class="form-check-label" for="interior-trunk-spare">Spare (Holds Air, Not Rusty)</label>
+            <label class="form-check-label" for="interior-trunk-spare" data-i18n="test-drive.interior-trunk-spare">Spare (Holds Air, Not Rusty)</label>
         </div>
 
         <!-- Jack with Lug Wrench -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-trunk-jack-lug-wrench" />
-            <label class="form-check-label" for="interior-trunk-jack-lug-wrench">Jack with Lug Wrench</label>
+            <label class="form-check-label" for="interior-trunk-jack-lug-wrench" data-i18n="test-drive.interior-trunk-jack-lug-wrench">Jack with Lug Wrench</label>
         </div>
 
         <!-- Spare Tire Carrier Round (No Indents) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-trunk-spare-carrier" />
-            <label class="form-check-label" for="interior-trunk-spare-carrier">Spare Tire Carrier Round (No
+            <label class="form-check-label" for="interior-trunk-spare-carrier" data-i18n="test-drive.interior-trunk-spare-carrier">Spare Tire Carrier Round (No
                 Indents)</label>
         </div>
 
         <!-- Lug Nut Key (Locking Lug-Nuts) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-trunk-lug-nut-key" />
-            <label class="form-check-label" for="interior-trunk-lug-nut-key">Lug Nut Key (Locking Lug-Nuts)</label>
+            <label class="form-check-label" for="interior-trunk-lug-nut-key" data-i18n="test-drive.interior-trunk-lug-nut-key">Lug Nut Key (Locking Lug-Nuts)</label>
         </div>
 
         <!-- Water Marks, Damp Carpet? -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-trunk-water-marks-damp-carpet" />
-            <label class="form-check-label" for="interior-trunk-water-marks-damp-carpet">Water Marks, Damp
+            <label class="form-check-label" for="interior-trunk-water-marks-damp-carpet" data-i18n="test-drive.interior-trunk-water-marks-damp-carpet">Water Marks, Damp
                 Carpet?</label>
         </div>
         <!-- Subtitle: Vehicle Options -->
-        <h3>Vehicle Options</h3>
+        <h3 data-i18n="test-drive.h3-vehicle-otions">Vehicle Options</h3>
 
         <!-- Power Windows (Roll Up/Down, Scratches) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-power-windows" />
-            <label class="form-check-label" for="interior-vehicle-power-windows">Power Windows (Roll Up/Down,
+            <label class="form-check-label" for="interior-vehicle-power-windows" data-i18n="test-drive.interior-vehicle-power-windows">Power Windows (Roll Up/Down,
                 Scratches)</label>
         </div>
 
         <!-- Window Tint (Bubbles, Legal) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-window-tint" />
-            <label class="form-check-label" for="interior-vehicle-window-tint">Window Tint (Bubbles, Legal)</label>
+            <label class="form-check-label" for="interior-vehicle-window-tint" data-i18n="test-drive.interior-vehicle-window-tint">Window Tint (Bubbles, Legal)</label>
         </div>
 
         <!-- Power Mirrors (Heat and Movement) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-power-mirrors" />
-            <label class="form-check-label" for="interior-vehicle-power-mirrors">Power Mirrors (Heat and
+            <label class="form-check-label" for="interior-vehicle-power-mirrors" data-i18n="test-drive.interior-vehicle-power-mirrors">Power Mirrors (Heat and
                 Movement)</label>
         </div>
 
         <!-- Power Locks (All Doors Lock/Unlock) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-power-locks" />
-            <label class="form-check-label" for="interior-vehicle-power-locks">Power Locks (All Doors
+            <label class="form-check-label" for="interior-vehicle-power-locks" data-i18n="test-drive.interior-vehicle-power-locks">Power Locks (All Doors
                 Lock/Unlock)</label>
         </div>
 
         <!-- Radio (AM/FM/Clock Set Right, Speakers Work) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-radio" />
-            <label class="form-check-label" for="interior-vehicle-radio">Radio (AM/FM/Clock Set Right, Speakers
+            <label class="form-check-label" for="interior-vehicle-radio" data-i18n="test-drive.interior-vehicle-radio">Radio (AM/FM/Clock Set Right, Speakers
                 Work)</label>
         </div>
 
         <!-- AC/Heat (All Settings, All Vents) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-ac-heat" />
-            <label class="form-check-label" for="interior-vehicle-ac-heat">AC/Heat (All Settings, All Vents)</label>
+            <label class="form-check-label" for="interior-vehicle-ac-heat" data-i18n="test-drive.interior-vehicle-ac-heat">AC/Heat (All Settings, All Vents)</label>
         </div>
 
         <!-- Navigation (Make Sure It Locates) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-navigation" />
-            <label class="form-check-label" for="interior-vehicle-navigation">Navigation (Make Sure It Locates)</label>
+            <label class="form-check-label" for="interior-vehicle-navigation" data-i18n="test-drive.interior-vehicle-navigation">Navigation (Make Sure It Locates)</label>
         </div>
 
         <!-- Sunroof (Opens/Closes, No Leaks) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-sunroof" />
-            <label class="form-check-label" for="interior-vehicle-sunroof">Sunroof (Opens/Closes, No Leaks)</label>
+            <label class="form-check-label" for="interior-vehicle-sunroof" data-i18n="test-drive.interior-vehicle-sunroof">Sunroof (Opens/Closes, No Leaks)</label>
         </div>
 
         <!-- Rear View Mirror (Auto-Dim) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-rear-view-mirror" />
-            <label class="form-check-label" for="interior-vehicle-rear-view-mirror">Rear View Mirror (Auto-Dim)</label>
+            <label class="form-check-label" for="interior-vehicle-rear-view-mirror" data-i18n="test-drive.interior-vehicle-rear-view-mirror">Rear View Mirror (Auto-Dim)</label>
         </div>
 
         <!-- Parking Sensors (Beep in Reverse) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-parking-sensors" />
-            <label class="form-check-label" for="interior-vehicle-parking-sensors">Parking Sensors (Beep in
+            <label class="form-check-label" for="interior-vehicle-parking-sensors" data-i18n="test-drive.interior-vehicle-parking-sensors">Parking Sensors (Beep in
                 Reverse)</label>
         </div>
 
         <!-- Lights (Glove Box, Map, Dashboard, etc) -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-lights" />
-            <label class="form-check-label" for="interior-vehicle-lights">Lights (Glove Box, Map, Dashboard,
+            <label class="form-check-label" for="interior-vehicle-lights" data-i18n="test-drive.interior-vehicle-lights">Lights (Glove Box, Map, Dashboard,
                 etc)</label>
         </div>
 
         <!-- Emergency Brake Holds Car in Neutral -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-emergency-brake" />
-            <label class="form-check-label" for="interior-vehicle-emergency-brake">Emergency Brake Holds Car in
+            <label class="form-check-label" for="interior-vehicle-emergency-brake" data-i18n="test-drive.interior-vehicle-emergency-brake">Emergency Brake Holds Car in
                 Neutral</label>
         </div>
 
         <!-- Heated Seats -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-vehicle-heated-seats" />
-            <label class="form-check-label" for="interior-vehicle-heated-seats">Heated Seats</label>
+            <label class="form-check-label" for="interior-vehicle-heated-seats" data-i18n="test-drive.interior-vehicle-heated-seats">Heated Seats</label>
         </div>
 
         <!-- Subtitle: Vehicle Options -->
-        <h3>Headliner:</h3>
+        <h3 data-i18n="test-drive.">Headliner:</h3>
 
         <!-- Sagging? -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-headliner-sagging" />
-            <label class="form-check-label" for="interior-headliner-sagging">Sagging?</label>
+            <label class="form-check-label" for="interior-headliner-sagging" data-i18n="test-drive.">Sagging?</label>
         </div>
 
         <!-- Water Damage, Burns, Damage -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-headliner-damage" />
-            <label class="form-check-label" for="interior-headliner-damage">Water Damage, Burns, Damage</label>
+            <label class="form-check-label" for="interior-headliner-damage" data-i18n="test-drive.">Water Damage, Burns, Damage</label>
         </div>
         <!-- Wear and Tear -->
 
-        <h3>Wear and Tear:</h3>
+        <h3 data-i18n="test-drive.">Wear and Tear:</h3>
 
         <!-- Gas/Brake Pedal -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-pedals" />
-            <label class="form-check-label" for="interior-pedals">Gas/Brake Pedal</label>
+            <label class="form-check-label" for="interior-pedals" data-i18n="test-drive.">Gas/Brake Pedal</label>
         </div>
 
         <!-- Steering Wheel -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-steering-wheel" />
-            <label class="form-check-label" for="interior-steering-wheel">Steering Wheel</label>
+            <label class="form-check-label" for="interior-steering-wheel" data-i18n="test-drive.">Steering Wheel</label>
         </div>
 
         <!-- Shift Knob -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-shift-knob" />
-            <label class="form-check-label" for="interior-shift-knob">Shift Knob</label>
+            <label class="form-check-label" for="interior-shift-knob" data-i18n="test-drive.">Shift Knob</label>
         </div>
 
         <!-- Seats/Carpet -->
         <div class="mb-3 form-check ">
             <input type="checkbox" class="form-check-input" id="interior-seats-carpet" />
-            <label class="form-check-label" for="interior-seats-carpet">Seats/Carpet</label>
+            <label class="form-check-label" for="interior-seats-carpet" data-i18n="test-drive.">Seats/Carpet</label>
         </div>
         <!-- New Checklist Section - Exterior -->
-        <h2>Exterior</h2>
+        <h2 data-i18n="test-drive.">Exterior</h2>
 
         <!-- Subtitle: Lights -->
-        <h3>Lights</h3>
+        <h3 data-i18n="test-drive.">Lights</h3>
 
         <!-- High/Low Beams -->
         <div class="mb-3 form-check ">
