--- a/pages/about.html
+++ b/pages/about.html
@@ -1,21 +1,20 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="We've put together comprehensive checklists to help you make informed decisions when purchasing a car.">
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HVQPSX94JX"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'G-HVQPSX94JX');
+        gtag('config', 'G-HVQPSX94JX');
     </script>
     <title>About us</title>
 
@@ -23,21 +22,22 @@
     <!-- Include Bootstrap CSS -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- Custom CSS Styles -->
-  <link rel="stylesheet" href="/css/styles.css">
-  <script>
-    $(document).ready(function () {
-        $("#navbar").load("/pages/navi.html");
 
-    });
-</script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Custom CSS Styles -->
+    <link rel="stylesheet" href="/css/styles.css">
+    <script>
+        $(document).ready(function () {
+            $("#navbar").load("/pages/navi.html");
+
+        });
+    </script>
     <!-- translations -->
     <script src="https://cdn.jsdelivr.net/npm/i18next@23.2.1/i18next.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-i18next@1.2.1/jquery-i18next.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/i18next-http-backend@2.2.1/i18nextHttpBackend.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/i18next-browser-languagedetector@7.1.0/i18nextBrowserLanguageDetector.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/i18next-browser-languagedetector@7.1.0/i18nextBrowserLanguageDetector.min.js"></script>
 
 </head>
 
@@ -50,7 +50,9 @@
             <h3 class="display-4" data-i18n="about.hi">Hey there!</h3>
             <p data-i18n="about.p1">I've put together these checklists to make car buying a whole lot easier.</p>
             <p data-i18n="about.p2">They've worked like a charm for me, and I hope they do the same for you!</p>
-            <p data-i18n="about.p3">Any feedback that could be useful for others? Feel free to share it with me here. 🚗😄</p>
+            <p data-i18n="about.p3">Any feedback that could be useful for others? Feel free to share it with me here.
+                🚗😄</p>
+                <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@autocheckliste" data-unique-id="autocheckliste" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@autocheckliste?refer=creator_embed">@autocheckliste</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
         </div>
     </div>
 
