--- a/pages/navi.html
+++ b/pages/navi.html
@@ -12,11 +12,11 @@
                     <a class="nav-link dynamic-href" href="/index.html" data-i18n="nav.home">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dynamic-href" href="/pages/basic_checklist.html" data-i18n="nav.basic">BASIC
+                    <a class="nav-link dynamic-href" href="/pages/basic-checklist.html" data-i18n="nav.basic">BASIC
                         </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dynamic-href" href="/pages/test_drive.html" data-i18n="nav.drive">TEST DRIVE
+                    <a class="nav-link dynamic-href" href="/pages/test-drive-checklist.html" data-i18n="nav.drive">TEST DRIVE
                         </a>
                 </li>
                 <li class="nav-item">
