--- a/pages/basic-checklist.html
+++ b/pages/basic-checklist.html
@@ -5,6 +5,9 @@
     
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A basic checklist for used cars. Learn how to inspect scratches, dents, headlights, and more.">
+
+    <title>Basic Checklist</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HVQPSX94JX"></script>
     <script>
