--- a/pages/test-drive-checklist.html
+++ b/pages/test-drive-checklist.html
@@ -5,7 +5,9 @@
    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A comprehensive test drive checklist for used cars. Learn how to inspect scratches, dents, headlights, and more.">
 
+    <title>Test Drive Checklist</title>
      <!-- Google tag (gtag.js) -->
      <script async src="https://www.googletagmanager.com/gtag/js?id=G-HVQPSX94JX"></script>
      <script>
@@ -16,7 +18,6 @@
      gtag('config', 'G-HVQPSX94JX');
      </script>
 
-    <title>Test Drive Checklist</title>
     <!-- Include Bootstrap CSS -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
